--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <html>
-    <body>    
+    <body>
+      <script>
       var quarks = 0;
+      </script>
       <button>Make a quark</button>
     </body>
   </html>
