--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
       }
       </script>
       <p>Quarks: </p><p id="quarks"></p>
-      <button type="button" onclick="quarksUp">
+      <button type="button" onclick="quarksUp">Make a quark</button>
     </body>
   </html>
