--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       document.getElementById("quarks").innerHTML = quarks;
       function quarksUp() {
         quarks = quarks + 1;
+        document.getElementById("quarks").innerHTML = quarks;
       }
       </script>
     </body>
