--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <html>
     <body>
-      <p>Quarks: </p><p id="quarks"></p>
+      <p id="quarks">Quarks: </p>
       <button type="button" onclick="quarksUp">Make a quark</button>
       
       <script>
