quarks display fix

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <html>
     <body>
-      <p>Quarks: <p id="quarks"></p></p>
+      Quarks: <p id="quarks"></p>
       <button type="button" onclick="quarksUp">Make a quark</button>
       
       <script>
