--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <script>
       var quarks = 0;
       document.getElementById("quarks").innerHTML = quarks;
-      function quarksUp(var quarks) {
+      function quarksUp(quarks) {
         quarks = quarks + 1;
         document.getElementById("quarks").innerHTML = quarks;
         return quarks;
