--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <html>
     <body>
       Quarks: <p id="quarks"></p>
-      <button type="button" onclick="quarksUp">Make a quark</button>
+      <button type="button" onclick="quarksUp()">Make a quark</button>
       
       <script>
       var quarks = 0;
