--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       var quarks = 0;
       document.getElementById("quarks").innerHTML = quarks;
       function quarksUp(quarks) {
-        quarks = quarks + 1;
+        quarks++;
         document.getElementById("quarks").innerHTML = quarks;
         return quarks;
       }
