--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <html>
     <body>
-      Quarks: id="quarks"
+      Quarks: <p id="demo">
       <button type="button" onclick="quarksUp()">Make a quark</button>
       
       <script>
