--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
   <html>
     <body>
-      Quarks: <p id="demo">
-      <button type="button" onclick="quarksUp()">Make a quark</button>
+      Quarks: <p id="quarks"></p>
+      <button type="button" onclick="quarksUp(quarks)">Make a quark</button>
       
       <script>
       var quarks = 0;
