--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       
       <script>
       var quarks = 0;
-      document.getElementById("quarks").innerHTML = quarks;
+      document.getElementById("quarks").innerHTML = "Quarks: " + quarks;
       function quarksUp(quarks) {
         quarks++;
-        document.getElementById("quarks").innerHTML = quarks;
+        document.getElementById("quarks").innerHTML = "Quarks: " + quarks;
         return quarks;
       }
       </script>
