--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <html>
     <body>
-      Quarks: <p id="quarks"></p>
+      <p id="quarks"></p>
       <button type="button" onclick="quarksUp(quarks)">Make a quark</button>
       
       <script>
