--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script>
     var quarks = 0;
     document.getElementById("quarks").innerHTML = "Quarks: " + quarks;
+    </script>
+    <script>
     function quarksUp(quarks) {
       quarks++;
       document.getElementById("quarks").innerHTML = "Quarks: " + quarks;
