--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <button type="button" onclick="quarksUp(quarks)">Make a quark</button>
   </body>
   <script>
-  var quarks = 0;
+  int quarks = 0;
   document.getElementById("quarks").innerHTML = "Quarks: " + quarks;
   </script>
   <script>
