--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   document.getElementById("quarks").innerHTML = "Quarks: " + quarks;
   </script>
   <script>
-  function quarksUp(quarks) {
+  function quarksUp(int quarks) {
     quarks++;
     document.getElementById("quarks").innerHTML = "Quarks: " + quarks;
     return quarks;
