--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
   <script>
     int quarks = 0;
     document.getElementById("quarks").innerHTML = "Quarks: " + quarks;
-    function quarksUp(quarks) {
-      quarks++;
-      document.getElementById("quarks").innerHTML = "Quarks: " + quarks;
-      return quarks;
-    }
   </script>
   <body>
     <p id="quarks"></p>
-    <button type="button" onclick="quarksUp(quarks)">Make a quark</button>
+    <button type="button" onclick="document.getElementById('quarks').innerHTML = ++quarks">Make a quark</button>
   </body>
 </html>
