--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </script>
   <body>
     <p id="quarks"></p>
-    <button type="button" onclick="document.getElementById('quarks').innerHTML = ++quarks">Make a quark</button>
+    <button type="button" onclick="document.getElementById('quarks').innerHTML = "Quarks: " + ++quarks">Make a quark</button>
   </body>
 </html>
