--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     int quarks = 0;
     function quarksUp() {
       window.quarks++;
-      document.getElementById("quarks").innerHTML = "Quarks: " + quarks;
+      document.getElementById("quarks").innerHTML = "Quarks: " + window.quarks;
     }
   </script>
   <body>
