--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </script>
   <body>
     <p id="quarks">Quarks: 0</p>
-    <button type="button" onclick="quarksUp()">Make a quark</button>
+    <button onclick="quarksUp()">Make a quark</button>
   </body>
 </html>
