--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       }
       function quarksUp() {
         window.quarks++;
-        document.getElementById("quarks").innerHTML = "Quarks: " + window.quarks;
+        window.alert(window.quarks);
+        //document.getElementById("quarks").innerHTML = "Quarks: " + window.quarks;
       }
     </script>
   </body>
