--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         int window.quarks = 0;
       }
       function quarksUp() {
-        window.quarks++;
+        window.quarks += 1;
         window.alert(window.quarks);
         //document.getElementById("quarks").innerHTML = "Quarks: " + window.quarks;
       }
