--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
       }
       function quarksUp() {
         window.quarks += 1;
-        window.alert(window.quarks);
-        //document.getElementById("quarks").innerHTML = "Quarks: " + window.quarks;
+        document.getElementById("quarks").innerHTML = "Quarks: " + window.quarks;
       }
     </script>
   </body>
