--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <button onclick="quarksUp()">Make a quark</button>
     <script>
       function loadFunction() {
-        int window.quarks = 0;
+        window.quarks = 0;
       }
       function quarksUp() {
         window.quarks += 1;
